--- a/transcricao_reversa/transcricao.css
+++ b/transcricao_reversa/transcricao.css
@@ -20,7 +20,7 @@
 /* Barra superior fixa */
 .top-bar {
   background-color: #eecc77;
-  padding: 1rem;
+  padding: 0.1rem;
   position: fixed;
   width: 100%;
   z-index: 10;
@@ -44,7 +44,7 @@
   top: 0;
   left: 0;
   height: 100vh;
-  width: 100vw;
+  width: 25vw;
   background-color: rgba(255, 255, 255, 0.98);
   display: none;
   flex-direction: column;
@@ -82,9 +82,11 @@
 
 
     h1 {
-      font-size: 2rem;
+      font-size: 1.8rem;
+      font-family: Arial, Helvetica, sans-serif;
+      font-weight: 300;
       margin-bottom: 1rem;
-      color: #1565c0;
+      color: #b929d2;
     }
 
     textarea {
@@ -103,8 +105,8 @@
     }
 
     button {
-      background-color: #1565c0;
-      color: #1e1e2f;
+      background-color: #b929d2;
+      color: #f7f7fd;
       padding: 0.75rem 1.5rem;
       border: none;
       border-radius: 8px;
@@ -115,7 +117,7 @@
     }
 
     button:hover {
-      background-color: #1565c0;
+      background-color: #c015bd;
     }
 
     audio {
