--- a/cam/cam.css
+++ b/cam/cam.css
@@ -116,13 +116,14 @@ header {
 
 /* Video com borda arredondada e borda fina */
 #video {
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
   border-radius: 30px;
   border: 2px solid #7b58aa;
   background: #fff;
   object-fit: cover;
   box-shadow: 0 4px 6px rgba(0,0,0,0.15);
+  margin-bottom: 20px;
 }
 
 /* Canvas invisível */
