--- a/videos/videos.css
+++ b/videos/videos.css
@@ -6,24 +6,87 @@
 
     body {
         font-family: Arial, sans-serif;
-        background-color: #f9f9f9;
         color: #0f0f0f;
+        background-image: radial-gradient(circle, rgb(252, 163, 237), rgb(248, 248, 129) , rgb(206, 141, 223));
     }
-
-    header {
-        background-color: #ffffff;
-        padding: 10px 20px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        position: sticky;
+    /* Barra superior fixa */
+.top-bar {
+    background-color: #eecc77;
+    padding: 0.1rem;
+    position: fixed;
+    width: 100%;
+    z-index: 10;
+    top: 0;
+    display: flex;
+    justify-content: flex-start;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+       
         top: 0;
-        z-index: 1000;
-    }
+    
+}
 
-    header h1 {
-        color: #ff0000;
+/* Botão do menu */
+#menu-toggle {
+  font-size: 1.5rem;
+  background: none;
+  border: none;
+  color: #333;
+  cursor: pointer;
+}
+
+/* Menu lateral - ocupa 100% da tela */
+.side-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 25vw;
+  background-color: rgba(255, 255, 255, 0.98);
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9;
+  transition: all 0.3s ease;
+}
+
+.side-menu.open {
+  display: flex;
+}
+
+.side-menu ul {
+  list-style: none;
+  padding: 0;
+  width: 100%;
+}
+
+.side-menu li {
+  padding: 1rem;
+  text-align: center;
+}
+
+.side-menu a {
+  color: #000;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.side-menu a:hover {
+  text-decoration: underline;
+}
+
+
+
+    header h2 {
+        color: #000000;
+        font-size: 24px;
+        justify-content: center;
+        margin-left: 9%;
     }
 
     .carousel-wrapper {
