--- a/videos/videos.css
+++ b/videos/videos.css
@@ -87,8 +87,9 @@ header h2 {
     color: #ffffff;
     font-size: 24px;
     justify-content: center;
-    margin-left: 9%;
-
+    text-align: center;
+    align-items: center;
+    margin: auto;
     text-shadow: #000 1px 1px 2px;
 }
 
@@ -107,8 +108,8 @@ header h2 {
 .section-title {
     font-size: 22px;
     font-weight: bold;
-    color: #444;
-    background-color: yellow;
+    color: black;
+    background-color: #fddb66;
     padding: 10px 15px;
     border-radius: 10px;
     margin: 20px;
@@ -162,7 +163,7 @@ header h2 {
 }
 
 .carousel-buttons button {
-    background-color: #dc94e6;
+    background-color: #7a35b6;
     border: 1px solid #8faaf5;
     color: #fff;
     font-size: 18px;
