--- a/cam/cam.css
+++ b/cam/cam.css
@@ -8,76 +8,84 @@
 }
 /* Reset básico */
 * {
-   margin: 0;
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/* Corpo com fundo roxo claro */
+/* Corpo  */
 body {
   align-items:center;
   justify-content:center;
   font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
   background:#071126 0%;
   color:#e6eef6;
-  padding:28px;
-  height: 100vh;
+  height: 105vh;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding-top: 90px;
+  padding-bottom: 60px;
 }
-#menu-toggle {
-  font-size: 1.5rem;
-  background: none;
-  border: none;
-  color: #333;
-  cursor: pointer;
-  position: absolute;
+.navbar {
+  position: relative;
+  display: flex;
+  align-items: center;
 }
 
-/* Menu lateral */
-.side-menu {
+.menu-toggle {
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  z-index: 20;
+  margin-left: 10px;
+  margin-top: 7px;
+}
+
+.menu-toggle span {
+  background: #333;
+  height: 3px;
+  margin: 4px 0;
+  width: 25px;
+  border-radius: 2px;
+  
+}
+
+/* Menu lateral estilo slide */
+.nav-list {
   position: fixed;
   top: 0;
-  left: 0;
+  left: -300px; /* escondido inicialmente */
   height: 100vh;
-  width: 25vw;
-  background-color: rgba(255, 255, 255, 0.98);
-  display: none;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: 9;
-  transition: all 0.3s ease;
-}
-
-.side-menu.open {
+  width: 260px;
+  background-color: white;
+  box-shadow: 4px 0 12px rgba(0, 0, 0, 0.2);
+  padding: 2rem 1rem;
+  transition: left 0.3s ease;
   display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  z-index: 15;
 }
 
-.side-menu ul {
+.nav-list li {
   list-style: none;
-  padding: 0;
-  width: 100%;
-}
-
-.side-menu li {
-  padding: 1rem;
+  margin-bottom: 1.5rem;
   text-align: center;
 }
 
-.side-menu a {
-  color: #000;
+.nav-list li a {
   text-decoration: none;
-  font-weight: bold;
-  font-size: 1.2rem;
+  color: #000;
+  font-size: 1rem;
+  font-weight: 600;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 5px;
 }
 
-.side-menu a:hover {
-  text-decoration: underline;
+.nav-list.show {
+  left: 0;
 }
-
 /* Header fixo no topo */
 header {
   background-color: #7a35b6; /* roxo escuro */
@@ -224,6 +232,7 @@ p.lead{
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin-bottom: 20px;
 }
 .dropzone {
   flex: 1;
