--- a/videos/videos.css
+++ b/videos/videos.css
@@ -135,13 +135,14 @@ header h2 {
 
 .video-card iframe {
     width: 280px;
-    height: 170px;
+    height: 180px;
     border: none;
     border-radius: 8px;
-} 
+}
 
-.video-info {
-    padding: 10px;
+.video-card:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
 }
 .video-info h3 {
     font-size: clamp(14px, 2.5vw, 16px); /* mínimo 14px, cresce até 16px */
