--- a/cam/cam.css
+++ b/cam/cam.css
@@ -24,7 +24,7 @@ body {
   height: 105vh;
   display: flex;
   flex-direction: column;
-  padding-top: 90px;
+  padding-top: 0%;
   padding-bottom: 60px;
 }
 .navbar {
@@ -38,7 +38,7 @@ body {
   flex-direction: column;
   cursor: pointer;
   z-index: 20;
-  margin-left: 10px;
+  margin-left: 20px;
   margin-top: 7px;
 }
 
@@ -54,13 +54,13 @@ body {
 /* Menu lateral estilo slide */
 .nav-list {
   position: fixed;
-  top: 0;
+  top: 0px;
   left: -300px; /* escondido inicialmente */
   height: 100vh;
-  width: 260px;
+  width: 20vw;
   background-color: white;
   box-shadow: 4px 0 12px rgba(0, 0, 0, 0.2);
-  padding: 2rem 1rem;
+  padding: 2rem 2rem;
   transition: left 0.3s ease;
   display: flex;
   flex-direction: column;
@@ -70,8 +70,9 @@ body {
 
 .nav-list li {
   list-style: none;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
   text-align: center;
+  
 }
 
 .nav-list li a {
@@ -133,6 +134,7 @@ header {
   object-fit: cover;
   box-shadow: 0 4px 6px rgba(0,0,0,0.15);
   margin-bottom: 20px;
+  
 }
 
 /* Canvas invisível */
@@ -160,7 +162,7 @@ button {
   cursor: pointer;
   box-shadow: 0 3px 5px rgba(0,0,0,0.25);
   transition: background-color 0.3s ease;
-  min-width: 150px;
+  width: 40%;
 }
 
 button:hover {
@@ -199,7 +201,7 @@ h2 {
   font-weight: 600;
   text-align: center;
   font-size: 18px;
-  margin-top: 80px;
+  margin-top: 40%;
 }
 
 .container{
@@ -224,7 +226,7 @@ p.lead{
 /* upload area */
 .upload {
   border-radius: 10px;
-  padding: 18px;
+  padding: 10%;
   border: 1px dashed rgba(255, 255, 255, 0.06);
   background: var(--glass);
   display: flex;
@@ -264,12 +266,14 @@ p.lead{
 .btn {
   background: linear-gradient(90deg, var(--accent), #8a40eb);
   border: none;
-  padding: 10px 14px;
+  height: 50%;
+  width: 50%;
   border-radius: 10px;
   color: #052028;
   font-weight: 700;
   cursor: pointer;
   box-shadow: 0 6px 18px rgba(203, 113, 255, 0.267);
+  
 }
 .btn.ghost {
   background: transparent;
