--- a/login/login.css
+++ b/login/login.css
@@ -29,10 +29,15 @@ body {
     font-family: 'Roboto', sans-serif;
     font-weight: 100; /* Thin */
     font-weight: 300; /* Light */ 
-    font-size: 2rem;
-    margin: 10px 0;
+    font-size: clamp(32px, 2vw, 32px);
+    
     color: white;
     padding: 50px;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin: auto;
+    text-shadow: #000 1px 1px 2px;
 }
 
 
